# evalbench

./: .env.example  .gitignore  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: deploy.yml
.superpowers/sdd/: task-1-report.md  task-3-report.md
.superpowers/sdd/reports/: task-1-implementer.md  task-2-implementer.md  task-3-implementer.md  task-4-implementer.md
backend/: deploy.py
backend/data/latency_cost/: tasks.jsonl
backend/data/rag/: LABELING.md  corpus.jsonl  queries.jsonl
backend/data/structured/: finance.jsonl  legal.jsonl  medical.jsonl  physics.jsonl  software.jsonl
backend/evalbench/: config.py  judge.py  lambda_handler.py  models.py  registry.py  runner.py  runner_lambda.py  store.py
backend/evalbench/api/: app.py
backend/evalbench/cloud/: auth.py  db_sync.py  lambda_invoke.py  run_status.py  ssm.py
backend/evalbench/suites/: base.py  latency_cost.py  rag.py  structured.py
backend/tests/: conftest.py  test_cloud.py  test_runner.py  test_runner_lambda.py  test_store.py  test_suites.py  test_terraform_wiring.py
docs/: cloud-deploy.md
docs/superpowers/plans/: 2026-07-15-evalbench-phase-1-core.md  2026-07-15-evalbench-phase-2-structured.md  2026-07-15-evalbench-phase-3-dashboard.md  2026-07-15-evalbench-phase-5-rag.md  (+5 more)
terraform/: api_keys.tf  backend.tf  dev.tfvars  github_oidc.tf  main.tf  outputs.tf  variables.tf
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: FilterControls.tsx  Leaderboard.tsx  Legend.tsx  ModelBarChart.tsx  ScopeBar.tsx
web/lib/: api.ts
(+4 files in other folders)
