[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalbench"
version = "0.1.0"
description = "Provider-agnostic LLM evaluation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "litellm",
    "sqlalchemy[asyncio]>=2",
    "aiosqlite",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/evalbench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "--strict-markers"
